# ai-requests-template

./: README.md  aistudio_request.whl  pyproject.toml
.github/workflows/: pytest.yaml
.py-conf/: conf-image.ps1  linters.ps1
aistudio_requests/: __base.py  generate.py  prompts.py  schemas.py
src/: __base.py  generate.py  schemas.py  system_message.py
tests/: conftest.py  test_function_generator.py  test_prompt_generator.py
